--- a/index.html
+++ b/index.html
@@ -1381,7 +1381,7 @@ knowledge that drives effective decision-making and sustainable business growth
   -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-
+  <script src="//code.tidio.co/5vsso4jjazusm0zivgf62qaglsqqndj3.js" async></script>
 </body>
 
 </html>
