--- a/index.html
+++ b/index.html
@@ -1466,6 +1466,7 @@ knowledge that drives effective decision-making and sustainable business growth
   -->
   <script src="./assets/js/script.js"></script>
   <script src="./assets/js/particles.min.js"></script>
+  <script src="//code.tidio.co/5vsso4jjazusm0zivgf62qaglsqqndj3.js" async></script>
   <script src="./assets/js/particlesjs-config.js"></script>
 
   <!--
