--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./assets/css/style404.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Page not found</title>
 </head>
 <body>
     <a href="index.html" target="">
